# connect-four

./: .gitignore  README.md  best_model.json  debug-test.js  env.d.ts  evaluation_results.json  package-lock.json  package.json  wrangler.toml
.cursor/rules/: robs-rules.mdc
.github/workflows/: deploy.yml
docs/: AI-MATRIX-RESULTS.md  AI-SYSTEM.md  ARCHITECTURE.md  CLOUDFLARE-DEPLOYMENT.md  CLOUDFLARE-QUICK-REFERENCE.md  CONSOLIDATION-SUMMARY.md  CURRENT-STATE.md  DEPLOYMENT.md  DEVELOPMENT.md  EMM-VS-HEURISTIC-ANALYSIS.md  GAME-GUIDE.md  INTEGRATION-COMPLETE.md  INTENSIVE-TRAINING.md  README.md  SELF-PLAY-TRAINING.md  TODO.md  WASM-INTEGRATION-PLAN.md
e2e/: smoke.spec.ts
ml/: README.md
ml/config/: training.json
ml/scripts/: clean_weights.py  convert_weights.py  (+7 more)
public/: manifest.json  sw.js
scripts/: convert_model_for_wasm.py  deploy.sh  format-ai-matrix-md.cjs  generate-sw.js  plot_evolution.py  test-ai-comparison.sh  test-wasm-loading.js  test-wasm.js
worker/: Cargo.toml
worker/rust_ai_core/: Cargo.toml  evolution_convergence_20250727_203821.csv  evolution_params_20250727_203821.csv
worker/rust_ai_core/src/: features.rs  genetic_params.rs  lib.rs  mcts.rs  ml_ai.rs  self_play.rs  training.rs  wasm_api.rs
worker/rust_ai_core/tests/: README.md  ai_diagnostic.rs  ai_matrix_test.rs  depth_comparison.rs  emm_vs_heuristic_analysis.rs  evaluation_test.rs  evolution_debug.rs  expectiminimax_diagnostic.rs  game_logic_test.rs  genetic_params_comparison.rs  minimax_debug.rs  ml_vs_expectiminimax.rs  ml_vs_minimax.rs  simple_game_test.rs
worker/src/: lib.rs
(+47 files in other folders)
