[package]
name = "connect-four-ai-worker"
version = "1.0.0"
edition = "2021"
authors = ["Robert Gilks"]
description = "Connect Four AI worker - Pure Rust"
license = "MIT"
repository = "https://github.com/robertgilks/connect-four"
keywords = ["cloudflare", "worker", "game", "ai", "connect-four"]
categories = ["wasm", "games", "web-programming"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
connect-four-ai-core = { path = "rust_ai_core", features = ["wasm"] }
wasm-bindgen = "0.2.100"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for size and performance
opt-level = "s"
lto = true
codegen-units = 1
